# zephyrtmp117test

./: CMakeLists.txt  Kconfig  prj.conf
boards/: nucleo_f401re.overlay
custom_dirver_module/: CMakeLists.txt
custom_dirver_module/drivers/sensor/: CMakeLists.txt  Kconfig
custom_dirver_module/drivers/sensor/custom_tmp117/: CMakeLists.txt  Kconfig  custom_tmp117.c  custom_tmp117.h
custom_dirver_module/dts/bindings/: zephyr,custom-tmp117.yaml
src/: main.c
